Add NodeManager class implementation to manage nodes, pins, and links
This commit introduces the NodeManager class, which includes methods for creating, removing, and managing nodes, pins, and links. The NodeManager also handles registration and deregistration of these entities, along with processing queues for efficient management. Additionally, the NodeManager is integrated into the CMake build system.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(NodeSimulation PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/Window/Window.cpp 
     ${CMAKE_CURRENT_SOURCE_DIR}/Window/MenuBar.cpp 
     ${CMAKE_CURRENT_SOURCE_DIR}/Node/NodeLayer.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/Node/NodeManager.cpp
 )
 
 target_include_directories(NodeSimulation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
