Organize CMakeLists.txt by moving target_sources to respective subdirectory files for Node, Simulation, and Window

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -2,14 +2,10 @@ cmake_minimum_required(VERSION 4.0)
 
 add_executable(NodeSimulation main.cpp)
 
-target_sources(NodeSimulation PRIVATE 
-    ${CMAKE_CURRENT_SOURCE_DIR}/Window/Window.cpp 
-    ${CMAKE_CURRENT_SOURCE_DIR}/Window/MenuBar.cpp 
-    ${CMAKE_CURRENT_SOURCE_DIR}/Window/FileMenu.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Node/NodeEditor.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Node/NodeManager.cpp
-)
-
 target_include_directories(NodeSimulation PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(NodeSimulation PRIVATE glad_gl glfw imgui)
+
+add_subdirectory(Node)
+add_subdirectory(Simulation)
+add_subdirectory(Window)
