Remove Object class and its header, and update CMakeLists.txt to include new source files

--- a/source/Simulation/CMakeLists.txt
+++ b/source/Simulation/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 4.0)
 
 target_sources(NodeSimulation PRIVATE
-    Object.cpp
+    ObjectLink.cpp
+    ObjectNode.cpp
+    ObjectPin.cpp
     Simulation.cpp
     SimulationEditor.cpp
 )
