Add Pugixml integration for saving and loading node configurations in NodeManager.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -7,3 +7,4 @@ include(FetchGlad.cmake)
 include(FetchGlfw.cmake)
 include(FetchImgui.cmake)
 include(FetchImnodes.cmake)
+include(FetchPugixml.cmake)
